# DirectX11Playground

./: .gitignore  LICENSE  README.md
Source/: CMakeLists.txt  GenerateProjectFiles.bat  MoGET.cmake  MoRE.sln
Source/Common/: CMakeLists.txt  Common.vcxproj  Common.vcxproj.filters  PropertySheet.props
Source/Common/Private/: DxErr.cpp  GameTimer.cpp  GeometryGenerator.cpp  MoFile.cpp  MoGETApp.cpp  MoREApp.cpp  targetver.h
Source/Common/Public/: Array.h  Build.h  Common.h  DX11Utils.h  DxErr.h  GameTimer.h  GeometryGenerator.h  MoFile.h  MoGETApp.h  MoMath.h  MoREApp.h  Platform.h  Scene.h  Types.h
Source/Common/Public/ShaderTypes/: DirectionalLight.h  LightingData.h  PointLight.h
Source/Common/Shaders/: Lighting.hlsl
Source/Example1/: CMakeLists.txt  Example1.vcxproj  Example1.vcxproj.filters
Source/Example1/Private/: Example1App.cpp  Main.cpp
Source/Example1/Public/: Example1App.h
Source/Example2/: CMakeLists.txt  Example2.vcxproj  Example2.vcxproj.filters
Source/Example2/Private/: Example2App.cpp  Main.cpp
Source/Example2/Public/: Example2App.h
Source/Example2/Shaders/: VertexShader.hlsl
Source/Example2/Shaders/Pixel/: PixelShader.hlsl
Source/Example3/: CMakeLists.txt  Example3.vcxproj  Example3.vcxproj.filters
Source/Example3/Private/: Example3App.cpp  Main.cpp
Source/Example3/Public/: Example3App.h
Source/Example3/Shaders/Pixel/: PixelShader.hlsl
Source/Example3/Shaders/Vertex/: VertexShader.hlsl
Source/Test1/: Test1.vcxproj  Test1.vcxproj.filters
Source/Test1/Private/: Main.cpp
